src/objects/SM_FormAPICampaign__mdt.object
<CustomObject>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Campaign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MANUAL</fullName>
                    <default>true</default>
                    <label>MANUAL</label>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Offerte.nl</fullName>
                </value>
                <value>
                    <fullName>EPI</fullName>
                </value>
                <value>
                    <fullName>Companeo</fullName>
                </value>
                <value>
                    <fullName>KonceptM</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Bobex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SM_FormAPICampaign</label>
    <pluralLabel>SM_FormAPICampaigns</pluralLabel>
</CustomObject>